# src/main/resources/api.yaml
@@ -61,17 +61,8 @@ paths:
       responses:
         200:
           description: Creates and retrieves the new account as per details
-          headers:
-            opc-work-request-id:
-              type: string
-              description: |
-                Unique Oracle-assigned identifier for the asynchronous request. You can use this to query status of the asynchronous operation.
-            opc-request-id:
-              description: |
-                Unique Oracle-assigned identifier for the request. If
-                you need to contact Oracle about a particular request,
-                please provide the request ID.
-              type: string
+          schema:
+            $ref: '#/definitions/Account'
         409:
           $ref: '#/responses/409'
         500:
